# GBA

./: .gitignore  .gitmodules  CMakeLists.txt
2dProjects/tiledmap/: Makefile
2dProjects/tiledmap/include/: tale.h
2dProjects/tiledmap/source/: fastCode.iwram.cpp  main.cpp  tale.cpp
2dProjects/tiledmap/tiles/: BilibinTiles.psd  BilibinTiles.tsx  Tale.tsx  Tale2.tsx  combinedTilemap.psd  river.csv  river.tmx  riverTiles.tsx  tale-bg2.tsx  tale.cpp  talebg2.cpp  talebg3.cpp  talebg32.cpp  testTileset1.tsx  testmap1.tmj  testmap1.tmx  testmap1_Tile Layer 1.csv  testmap1_Tile Layer 2.csv  testmap1_Tile Layer 3.csv
common/include/: Camera.h  Color.h  Device.h  Display.h  Draw.h  Keypad.h  Text.h  Timer.h  base.h  container.h  fastMath.h  font.h  linearMath.h  matrix.h  mercuryLUT.cpp  mercuryLUT.h  noise.h  pose.h  raycast.h  tiles.h  vector.h
common/include/gfx/: armGfx.h  palette.h  sprite.h  tile.h
common/include/tools/: frameCounter.h
common/source/: Camera.cpp  Display.cpp  Draw.cpp  Text.cpp  draw.iwram.cpp  pose.cpp  raycast.cpp  raycast.iwram.cpp
common/source/gfx/: armGfx.iwram.cpp  tile.cpp
common/source/tools/: frameCounter.cpp
mode7/: Makefile
mode7/assets/: pod.glb  poolMap.cpp  poolMap.h  poolMap.psd
mode7/include/: Camera.h  demo.h
mode7/source/: main.cpp  mode7.cpp  mode7.iwram.cpp
mode7tonc/: Makefile
mode7tonc/assets/: font.bmp.cpp
mode7tonc/source/: m7_demo.cpp  m7_demo.h  m7_isrs.iwram.cpp
pc/common/: common.vcxproj  common.vcxproj.filters
pc/include/: glad.h  imageUtils.h
pc/mercury/: Mercury.sln  example_glfw_opengl3.vcxproj  example_glfw_opengl3.vcxproj.filters  fullScreen.pxl  fullScreen.vtx  main.cpp  mainDemo.cpp
pc/rt/: main.cpp
pc/triangleRaster/: example_glfw_opengl3.vcxproj  example_glfw_opengl3.vcxproj.filters  fixedMath.natvis  glad.c
raycaster/: Makefile  Perf notes.txt
raycaster/assets/: Mercury.wad  TEST.wad  e1m1.wad.cpp  e1m1.wad.h  mercury.wad.cpp  mercury.wad.h  pod.blend  portaltest.wad.cpp  portaltest.wad.h  test.wad.cpp  test.wad.h
raycaster/include/: SectorRasterizer.h  WAD.h  demo.h  raycaster.h
raycaster/source/: SectorRasterizer.cpp  SectorRasterizer.iwram.cpp  fastCode.iwram.cpp  main.cpp
raytrace/assets/: font.bmp.cpp
raytrace/source/: main.cpp
scripts/: divError.py
test/: cameraTest.cpp  fixedPointMath.cpp
testProject/: Makefile
testProject/assets/: font.bmp.cpp  font.h
testProject/include/: Color.h  Device.h  Display.h  Draw.h  Timer.h  linearMath.h  math.h  tiles.h  vector.h
testProject/source/: Draw.cpp  main.cpp
tools/lutGenerator/: main.cpp
tools/pngToCpp/: main.cpp  pngToCpp.sln  pngToCpp.vcxproj
tools/wadToCpp/: main.cpp
triangles/assets/: Mercury.wad  PortalTest.wad  e1m1.wad.h  mercury.wad.cpp  mercury.wad.h  portaltest.wad.cpp  portaltest.wad.h  test.wad.h
triangles/include/: Rasterizer.h  WAD.h  raycaster.h
triangles/source/: Rasterizer.cpp  Rasterizer.iwram.cpp  fastCode.iwram.cpp  main.cpp
